# src/app/todo/todo.dto.ts
@@ -1,0 +1,15 @@
+export interface Todo {
+  _id: string;
+  title: string;
+  completed: boolean;
+  createdAt: string;
+  updatedAt: string;
+  __v?: string | number;
+}
+
+export type CreateTodoDto = {
+  title: string;
+  completed?: boolean;
+};
+
+export type UpdateTodoDto = Partial<CreateTodoDto>;
