# src/app/todo/todo.model.ts
@@ -1,12 +1,5 @@
 import { model, Schema } from 'mongoose';
-
-export interface Todo {
-  _id?: string;
-  title: string;
-  completed?: boolean;
-  createdAt?: Date;
-  updatedAt?: Date;
-}
+import { Todo } from './todo.dto';
 
 const todoSchema = new Schema<Todo>(
   {
