# src/swagger.json
@@ -19,21 +19,48 @@
 						"type": "boolean"
 					},
 					"createdAt": {
-						"type": "string",
-						"format": "date-time"
+						"type": "string"
 					},
 					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
+						"type": "string"
+					},
+					"__v": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "number",
+								"format": "double"
+							}
+						]
+					}
+				},
+				"required": [
+					"_id",
+					"title",
+					"completed",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateTodoDto": {
+				"properties": {
+					"completed": {
+						"type": "boolean"
+					},
+					"title": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"title"
 				],
-				"type": "object",
-				"additionalProperties": false
+				"type": "object"
 			},
-			"Pick_Todo.Exclude_keyofTodo._id-or-createdAt-or-updatedAt__": {
+			"Partial_CreateTodoDto_": {
 				"properties": {
 					"title": {
 						"type": "string"
@@ -42,15 +69,11 @@
 						"type": "boolean"
 					}
 				},
-				"required": [
-					"title"
-				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"description": "Make all properties in T optional"
 			},
-			"Omit_Todo._id-or-createdAt-or-updatedAt_": {
-				"$ref": "#/components/schemas/Pick_Todo.Exclude_keyofTodo._id-or-createdAt-or-updatedAt__",
-				"description": "Construct a type with the properties of T except for those in type K."
+			"UpdateTodoDto": {
+				"$ref": "#/components/schemas/Partial_CreateTodoDto_"
 			}
 		},
 		"securitySchemes": {}
@@ -153,11 +176,115 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Todo._id-or-createdAt-or-updatedAt_"
+								"$ref": "#/components/schemas/CreateTodoDto"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/todo/{id}": {
+			"get": {
+				"operationId": "GetTodoById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Todo"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateTodoDto"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
